# tracy_c_api

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp  profiler.cpp  profiler.h
